@@ -20,6 +20,9 @@ $Id$
 * Fixup compilation error when using GnuTLS only environment, thank to
   Simon Josefsson.
 
+* Allow several engines to co-exist, so application may select its
+  favorite.
+
 2007-10-05 - Version 1.02
 
 * Switch to free implementation of PKCS#11 headers.
